[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-analyzer"
version = "1.0.0"
description = "Deterministic measurement library for temporal data dynamics."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Temporal Analyzer Authors" }
]
dependencies = [
    "numpy>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
